Fix static links

--- a/src/app.html
+++ b/src/app.html
@@ -3,11 +3,11 @@
 	<head>
 		<meta charset="utf-8" />
 		<!-- <link rel="icon" href="%sveltekit.assets%/favicon.png" /> -->
-		<link rel="icon" href="/static/favicon.ico" type="image/x-icon" />
+		<link rel="icon" href="/favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet preload prefetch" href="/assets/fonts/Ubuntu.css" as="style" />
 		<link rel="stylesheet preload prefetch" href="/bootstrap/bootstrap.css" as="style" />
 		<link rel="stylesheet" href="/stylesheets/style.css" />
-		<script src="/static/external_scripts/canvasjs.min.js"></script>
+		<script src="/external_scripts/canvasjs.min.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
