--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,11 @@
 		<link rel="stylesheet preload prefetch" href="/assets/fonts/Ubuntu.css" as="style" />
 		<link rel="stylesheet preload prefetch" href="/bootstrap/bootstrap.css" as="style" />
 		<link rel="stylesheet" href="/stylesheets/style.css" />
+		<meta name="description" content="Конфигуратор насосного оборудования JETEX" />
+		<meta property="og:title" content="Конфигуратор JETEX" />
+		<meta property="og:url" content="http://77.222.43.140:4000/" />
+		<meta property="og:type" content="article" />
+		<meta property="og:image" content="/favicon.ico" />
 		<script src="/external_scripts/canvasjs.min.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
